--- a/index.html
+++ b/index.html
@@ -5,193 +5,263 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IndiTubes</title>
   <style>
-    body { font-family: sans-serif; margin: 0; background: #fff8f0; }
-    header { background: #d40000; color: white; display: flex; justify-content: space-between; align-items: center; padding: 1rem; }
-    .wallet { font-weight: bold; }
-    .section { display: none; padding: 1rem; }
-    .section.active { display: block; }
-    nav { position: fixed; bottom: 0; width: 100%; display: flex; background: #eee; }
-    nav button { flex: 1; padding: 1rem; border: none; font-weight: bold; background: #f9f9f9; cursor: pointer; }
-    .card { background: white; margin: 1rem 0; padding: 1rem; border-radius: 10px; box-shadow: 0 0 10px #ccc; }
-    .reward-tag { background: green; color: white; padding: 5px 10px; border-radius: 5px; display: inline-block; margin-top: 10px; }
-    .comment { background: #f0f0f0; margin-top: 5px; padding: 5px; border-radius: 5px; }
-    input, select, textarea { width: 100%; padding: 10px; margin-top: 10px; border-radius: 5px; border: 1px solid #ccc; }
-    button.action { background: #d40000; color: white; border: none; padding: 10px; border-radius: 5px; margin-top: 10px; cursor: pointer; }
-    .likes { margin-top: 10px; }
-    video { width: 100%; border-radius: 10px; }
-    .timer { font-weight: bold; color: green; margin-top: 5px; }
-    .top-info { display: flex; align-items: center; gap: 10px; margin-top: 10px; }
-    .top-info img { border-radius: 50%; width: 40px; height: 40px; }
-    .connector { background: yellow; border: none; padding: 5px 10px; border-radius: 5px; margin-left: auto; }
+    body{margin:0;font-family:sans-serif;background:#f2f3f5;color:#333;}
+    header{background:#e53935;color:#fff;padding:1rem;display:flex;justify-content:space-between;align-items:center;}
+    .wallet{font-weight:bold;}
+    section{padding:1rem;display:none;}
+    .active{display:block;}
+    input,button{margin:0.5rem 0;padding:0.7rem;border-radius:5px;border:1px solid #ccc;width:100%;box-sizing:border-box;}
+    button{cursor:pointer;}
+    nav{position:fixed;bottom:0;width:100%;display:flex;border-top:1px solid #ccc;background:#fff;}
+    nav button{flex:1;padding:0.8rem;border:none;background:#fafafa;font-size:0.9rem;}
+    .card{background:#fff;margin:1rem 0;padding:1rem;border-radius:8px;box-shadow:0 1px 3px rgba(0,0,0,0.1);}
+    video{width:100%;border-radius:8px;}
+    .top-info{display:flex;align-items:center;gap:10px;margin:0.5rem 0;}
+    .top-info img{width:35px;height:35px;border-radius:50%;object-fit:cover;}
+    .likes button, .share-btn, .connect-btn{background:#e0e0e0;border:none;border-radius:5px;margin-right:5px;padding:3px 8px;font-size:0.8rem;cursor:pointer;}
+    .share-btn{background:#42a5f5;color:#fff;}
+    .connect-btn{background:yellow;}
+    .connect-btn.active{background:green;color:#fff;}
+    .timer{margin-top:5px;font-size:0.9rem;color:#e68a00;}
+    .views{font-size:0.8rem;color:#666;margin-left:auto;}
   </style>
 </head>
 <body>
+  <header>
+    <div>🎥 IndiTubes</div>
+    <div class="wallet">Wallet: ₹<span id="wallet">0</span></div>
+  </header>
 
-<header>
-  <div>🎥 IndiTubes</div>
-  <div class="wallet">Wallet: ₹<span id="wallet">0</span></div>
-</header>
+  <div id="loginBox" style="padding:1rem;">
+    <h3>Login / Signup</h3>
+    <input id="uName" placeholder="Username"/><br/>
+    <input id="uPass" type="password" placeholder="Password"/><br/>
+    <input id="chImgFile" type="file" accept="image/*"/><br/>
+    <button onclick="doLogin()">Go</button>
+  </div>
 
-<div id="loginBox" style="padding: 2rem; text-align: center;">
-  <h2>Login</h2>
-  <input id="user" type="text" placeholder="Username" />
-  <input id="pass" type="password" placeholder="Password" />
-  <button class="action" onclick="login()">Login</button>
-</div>
+  <div id="app">
+    <section id="home" class="active"></section>
+    <section id="upload">
+      <h3>Upload Video</h3>
+      <input id="chName" placeholder="Channel Name"/><br/>
+      <button id="uploadBtn">⬆ Upload via Cloudinary</button>
+    </section>
+    <section id="profile"><h3>Your Profile</h3><div id="meInfo"></div><div id="profVideos"></div></section>
+    <section id="withdraw">
+      <h3>Withdraw</h3>
+      <p><strong>Balance:</strong> ₹<span id="balAmt">0</span></p>
+      <input id="wName" placeholder="Name"/><br/>
+      <input id="wContact" placeholder="Email/Phone"/><br/>
+      <input id="wUPI" placeholder="UPI ID"/><br/>
+      <input id="wAmount" placeholder="Amount"/><br/>
+      <button onclick="redeem()">Withdraw</button>
+    </section>
+    <nav>
+      <button onclick="go('home')">🏠 Home</button>
+      <button onclick="go('upload')">⬆ Upload</button>
+      <button onclick="go('profile')">👤 Profile</button>
+      <button onclick="go('withdraw')">💸 Withdraw</button>
+      <button onclick="logout()">🚪 Logout</button>
+    </nav>
+  </div>
 
-<div id="app" style="display:none;">
-  <section id="upload" class="section active">
-    <h3>Upload Video</h3>
-    <input id="title" type="text" placeholder="Video Title" />
-    <input id="channel" type="text" placeholder="Your Channel Name" />
-    <input id="channelImg" type="file" accept="image/*" />
-    <input id="videoFile" type="file" accept="video/*" />
-    <button class="action" onclick="upload()">Upload</button>
-  </section>
+  <script src="https://upload-widget.cloudinary.com/latest/global/all.js"></script>
+  <script>
+    const cloudName = "dtlbk3ncz", uploadPreset = "Inditube";
+    let users = {}, sessions = {}, current = null;
 
-  <section id="videos" class="section">
-    <h3>Watch & Earn</h3>
-    <div id="videoList"></div>
-  </section>
+    try {
+      users = JSON.parse(localStorage.getItem("users") || "{}");
+      sessions = JSON.parse(localStorage.getItem("sessions") || "{}");
+    } catch {}
 
-  <section id="walletSection" class="section">
-    <h3>Withdraw</h3>
-    <p>Balance: ₹<span id="balance">0</span></p>
-    <input id="name" placeholder="Your Name" />
-    <select id="method">
-      <option value="">Select Method</option>
-      <option>Paytm</option>
-      <option>Google Pay</option>
-      <option>PhonePe</option>
-      <option>UPI</option>
-    </select>
-    <input id="upi" placeholder="UPI ID or Number" />
-    <button class="action" onclick="redeem()">Withdraw</button>
-  </section>
-
-  <nav>
-    <button onclick="go('upload')">⬆ Upload</button>
-    <button onclick="go('videos')">📺 Videos</button>
-    <button onclick="go('walletSection')">💰 Wallet</button>
-  </nav>
-</div>
-
-<script>
-  let wallet = parseInt(localStorage.getItem('wallet') || 0);
-  let videos = JSON.parse(localStorage.getItem('videos') || '[]');
-
-  function login() {
-    if (user.value && pass.value) {
-      loginBox.style.display = 'none';
-      app.style.display = 'block';
-      document.getElementById('wallet').innerText = wallet;
-      document.getElementById('balance').innerText = wallet;
-      render();
+    function saveAll() {
+      localStorage.setItem("users", JSON.stringify(users));
+      localStorage.setItem("sessions", JSON.stringify(sessions));
     }
-  }
 
-  function go(id) {
-    document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-    document.getElementById(id).classList.add('active');
-    document.getElementById('wallet').innerText = wallet;
-    document.getElementById('balance').innerText = wallet;
-  }
+    function doLogin() {
+      const u = uName.value.trim(), p = uPass.value.trim(), f = chImgFile.files[0];
+      if (!u || !p) return alert("Enter username & password");
+      if (f) {
+        const r = new FileReader();
+        r.onload = () => completeLogin(u, p, r.result);
+        r.readAsDataURL(f);
+      } else {
+        completeLogin(u, p, null);
+      }
+    }
 
-  function upload() {
-    if (!title.value || !channel.value || !channelImg.files[0] || !videoFile.files[0]) return alert('All fields required');
-    const vReader = new FileReader();
-    const iReader = new FileReader();
-    vReader.onload = e => {
-      iReader.onload = i => {
-        videos.push({title: title.value, channel: channel.value, url: e.target.result, img: i.target.result, earned: false, likes: 0, dislikes: 0, comments: [], connectors: 0});
-        localStorage.setItem('videos', JSON.stringify(videos));
-        render(); go('videos');
-      };
-      iReader.readAsDataURL(channelImg.files[0]);
+    function completeLogin(u, p, img) {
+      if (!users[u]) users[u] = p;
+      else if (users[u] !== p) return alert("Wrong password");
+      current = u;
+      if (!sessions[u]) sessions[u] = { channel: u, chImg: img, videos: [], wallet: 0 };
+      else if (img) sessions[u].chImg = img;
+      loginBox.style.display = "none";
+      document.getElementById("app").style.display = "block";
+      renderAll();
+    }
+
+    function logout() {
+      current = null;
+      location.reload();
+    }
+
+    function go(id) {
+      [...document.querySelectorAll("section")].forEach(s => s.classList.remove("active"));
+      document.getElementById(id).classList.add("active");
+      if (id == "withdraw") document.getElementById("balAmt").innerText = sessions[current].wallet;
+    }
+
+    const widget = cloudinary.createUploadWidget({
+      cloudName, uploadPreset, sources: ["local", "url", "camera"],
+      resourceType: "video", folder: "inditube-videos", multiple: false
+    }, (err, res) => {
+      if (!err && res.event === "success") {
+        const info = res.info;
+        const v = {
+          id: Date.now(), title: info.original_filename, url: info.secure_url,
+          channel: sessions[current].channel, user: current,
+          likes: 0, dislikes: 0, views: 0, earned: false, connectors: []
+        };
+        sessions[current].videos.push(v); saveAll(); renderAll(); go("home");
+      }
+    });
+
+    uploadBtn.onclick = () => {
+      let cn = chName.value.trim();
+      if (cn) sessions[current].channel = cn;
+      saveAll(); widget.open();
     };
-    vReader.readAsDataURL(videoFile.files[0]);
-  }
 
-  function render() {
-    videoList.innerHTML = '';
-    videos.forEach((v, i) => {
-      const div = document.createElement('div');
-      div.className = 'card';
-      div.innerHTML = `
-        <video id="vid${i}" src="${v.url}" controls></video>
-        <div class="timer" id="timer${i}">⏱ Not started</div>
-        <div class="reward-tag">Earn ₹5</div>
-        <h4>${v.title}</h4>
+    function renderAll() {
+      updateWallet(); renderHome(); renderProfile();
+    }
+
+    function updateWallet() {
+      wallet.innerText = sessions[current].wallet;
+    }
+
+    function renderHome() {
+      const all = Object.values(sessions).flatMap(s => s.videos);
+      home.innerHTML = "<h3>Home</h3>" + all.map(v => {
+        const me = sessions[v.user];
+        const isConnected = v.connectors.includes(current);
+        return \`
+          <div class="card">
+            <video id="vid\${v.id}" src="\${v.url}" controls></video>
+            <div class="top-info">
+              <img src="\${me.chImg || ''}" onerror="this.style.display='none'"/>
+              <strong>\${v.channel}</strong>
+              <span class="views">\${v.views} views</span>
+            </div>
+            <div class="likes">
+              <button onclick="like(\${v.id},this)">👍\${v.likes}</button>
+              <button onclick="dislike(\${v.id},this)">👎\${v.dislikes}</button>
+              <button class="share-btn" onclick="shareVid('\${v.url}')">🔗Share</button>
+              <button class="connect-btn \${isConnected ? 'active' : ''}" onclick="connect(\${v.id},this)">
+                Connect (\${v.connectors.length})
+              </button>
+              <span class="timer" id="timer\${v.id}">Watch 30s to earn ₹5</span>
+            </div>
+          </div>\`;
+      }).join('');
+      all.forEach(setupTimer);
+    }
+
+    function renderProfile() {
+      const me = sessions[current];
+      meInfo.innerHTML = \`
         <div class="top-info">
-          <img src="${v.img}" />
-          <strong>${v.channel}</strong>
-          <button class="connector" onclick="connect(${i}, this)">Connector (${v.connectors})</button>
-        </div>
-        <div class="likes">
-          <button onclick="like(${i})">👍 (${v.likes})</button>
-          <button onclick="dislike(${i})">👎 (${v.dislikes})</button>
-          <button onclick="share()">🔗 Share</button>
-        </div>
-        <textarea id="comment${i}" placeholder="Leave a comment..."></textarea>
-        <button onclick="addComment(${i})">Comment</button>
-        <div id="comments${i}">${v.comments.map(c=>`<div class='comment'>${c}</div>`).join('')}</div>
-      `;
-      videoList.appendChild(div);
-      setupTimer(i);
-    });
-  }
+          <img src="\${me.chImg || ''}" onerror="this.style.display='none'"/>
+          <strong>\${me.channel}</strong>
+        </div>\`;
+      profVideos.innerHTML = me.videos.map(v => \`
+        <div class="card"><video src="\${v.url}" controls></video>
+        <div>Likes: \${v.likes} | Dislikes: \${v.dislikes} | Views: \${v.views}</div></div>
+      \`).join('');
+    }
 
-  function setupTimer(i) {
-    const vid = document.getElementById(`vid${i}`);
-    const timer = document.getElementById(`timer${i}`);
-    let earned = videos[i].earned;
-    let intv;
-    vid.addEventListener('play', () => {
-      if (earned) { timer.innerText = '✅ Already Earned'; return; }
-      clearInterval(intv);
-      intv = setInterval(() => {
-        const t = Math.floor(vid.currentTime);
-        if (t >= 30) {
-          clearInterval(intv);
-          wallet += 5;
-          videos[i].earned = true;
-          update();
-          timer.innerText = '✅ Earned ₹5!';
-        } else {
-          timer.innerText = `⏱ Watching: ${t}/30 sec`;
-        }
-      }, 1000);
-    });
-  }
+    function like(id, btn) {
+      changeVid(id, v => v.likes++);
+      btn.innerText = "👍" + findVid(id).likes;
+    }
 
-  function update() {
-    localStorage.setItem('videos', JSON.stringify(videos));
-    localStorage.setItem('wallet', wallet);
-    document.getElementById('wallet').innerText = wallet;
-    document.getElementById('balance').innerText = wallet;
-    render();
-  }
+    function dislike(id, btn) {
+      changeVid(id, v => v.dislikes++);
+      btn.innerText = "👎" + findVid(id).dislikes;
+    }
 
-  function like(i) { videos[i].likes++; update(); }
-  function dislike(i) { videos[i].dislikes++; update(); }
-  function connect(i, btn) { videos[i].connectors++; btn.disabled = true; update(); }
-  function addComment(i) {
-    const c = document.getElementById(`comment${i}`).value;
-    if (!c) return;
-    videos[i].comments.push(c);
-    update();
-  }
-  function share() {
-    if (navigator.share) navigator.share({ title: 'Watch this on IndiTubes', url: location.href });
-    else alert('Sharing not supported');
-  }
+    function connect(id, btn) {
+      changeVid(id, v => {
+        if (!v.connectors.includes(current)) v.connectors.push(current);
+      });
+      btn.classList.add("active");
+      btn.innerText = \`Connect (\${findVid(id).connectors.length})\`;
+    }
 
-  function redeem() {
-    if (wallet < 100) return alert('Minimum ₹100 needed');
-    if (!name.value || !method.value || !upi.value) return alert('Fill all fields');
-    alert(`Withdraw request sent for ₹${wallet} via ${method.value} to ${upi.value}`);
-    wallet = 0; update();
-  }
-</script>
+    function shareVid(url) {
+      const msg = \`Watch this on IndiTubes:\n\${url}\`;
+      if (navigator.share) navigator.share({ text: msg });
+      else prompt("Copy link:", msg);
+    }
+
+    function setupTimer(v) {
+      const vid = document.getElementById(\`vid\${v.id}\`);
+      const timer = document.getElementById(\`timer\${v.id}\`);
+      vid.onplay = () => {
+        const earned = findVid(v.id).earned;
+        if (earned) { timer.innerText = "✅ Earned ₹5"; return; }
+        let iv = setInterval(() => {
+          const t = Math.floor(vid.currentTime);
+          timer.innerText = \`⏱ \${t}/30 sec\`;
+          if (t >= 30) {
+            clearInterval(iv);
+            changeVid(v.id, vi => {
+              if (!vi.earned) {
+                vi.earned = true; vi.views++;
+                sessions[vi.user].wallet += 5;
+              }
+            });
+            timer.innerText = "✅ Earned ₹5!";
+            updateWallet(); renderProfile();
+          }
+        }, 500);
+      };
+    }
+
+    function findVid(id) {
+      return Object.values(sessions).flatMap(s => s.videos).find(v => v.id === id);
+    }
+
+    function changeVid(id, fn) {
+      Object.values(sessions).forEach(u => {
+        u.videos = u.videos.map(v => {
+          if (v.id === id) fn(v);
+          return v;
+        });
+      });
+      saveAll();
+    }
+
+    function redeem() {
+      const amt = parseInt(wAmount.value),
+            n = wName.value.trim(),
+            c = wContact.value.trim(),
+            u = wUPI.value.trim();
+      if (!amt || !n || !c || !u) return alert("Fill all fields");
+      if (amt > sessions[current].wallet) return alert("Insufficient");
+      sessions[current].wallet -= amt; saveAll(); updateWallet();
+      alert(\`Your payment is processed in 2‑3 hours.\`);
+      go("withdraw");
+    }
+
+    if (Object.keys(users).length) {
+      document.getElementById("app").style.display = "block";
+      renderAll();
+    }
+  </script>
 </body>
 </html>
